@@ -180,6 +180,16 @@ typedef unsigned int JDIMENSION;
 #define EXTERN(type)            extern type
 
 
+/* Originally, this macro was used as a way of defining function prototypes
+ * for both modern compilers as well as older compilers that did not support
+ * prototype parameters.  libjpeg-turbo no longer supports these older
+ * compilers, but the macro is still included because there is some software
+ * out there that uses it.
+ */
+
+#define JMETHOD(type,methodname,arglist)  type (*methodname) arglist
+
+
 /*
  * On a few systems, type boolean and/or its values FALSE, TRUE may appear
  * in standard header files.  Or you may have conflicts with application-
